@@ -1,3 +1,7 @@
+* Sep 19 2000 hship
+
+Support modules with no packages, plus other minor tweaks.
+
 * Sep 18 2000 hship
 
 Started ChangeLog (some time after release 0.1.1).
